add kraus lehman section to summary

--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -87,6 +87,9 @@
 	 	\bibitem{Kripke}
 	 	Kripke, S. Semantical Considerations on Modal Logic. {\em Acta Philosophica Fennica} {\bf 1963}, {\em 16}: 83-94.
 	 	
+	 	\bibitem{HalpernMoses}
+	 	Halpern, J. Y.; Moses, Y.  Towards a Theory of Knowledge and Ignorance: Preliminary Report. In: Apt K.R. (eds) Logics and Models of Concurrent Systems. NATO ASI Series (Series F: Computer and Systems Sciences), vol 13. Springer, Berlin, Heidelberg
+	 	
 	 	\bibitem{HarelKozenTiuryn}
 	 	Harel, D.; Kozen, D; Tiuryn, J. Dynamic Logic. MIT Press: Cambridge, MA, USA, 2000.
 	 	
@@ -95,6 +98,9 @@
 	 	
 	 	\bibitem{Lenzen}
 	 	Lenzen, W. Recent work in epistemic logic. {\em Acta Philosophica Fennica} {\bf 1972}, {\em 30(1)}: 1-219.
+	 	
+	 	\bibitem{MeyerHoek}
+	 	Meyer, J.J. Ch.; van der Hoek, W. Epistemic Logic for Artificial Intelligence. {\em Cambridge Tracts in Theoretical Computer Science.} Cambridge University Press: Cambridge, UK, 1995.
 	 	
 	 	\bibitem{Moore}
 	 	Moore, G.E. "Moore's Paradox. In Baldwin, T. {\em G.E. Moore: Selected Writings.} London: Routledge {\bf 1993}.
