--- a/Summary.tex
+++ b/Summary.tex
@@ -113,7 +113,35 @@ In Hintikka's 1967 \emph{Knowledge and Belief: A logic of the two notions}, he p
 \subsection{Kraus and Lehman System}
 \label{sec:kl}
 
+In \cite{KrausLehman}, Kraus and Lehman tackle the issue of how to combine knowledge and belief in a single system remarked on in the conclusion of Halpern and Moses in \cite{HalpernMoses}. The project at the time was very similar to that addressed by this dissertation's static foundation: the development of a logic sufficiently realistic and expressive for reasoning about intelligent agents. 
 
+They axiomatize knowledge and belief as follows.
+
+\begin{table}[H]
+	\begin{center}
+		\begin{tabular}{| l r |}
+			\hline
+			$\Kns{i}(\varphi \iimplies \psi) \iimplies (\Kns{i}\varphi \iimplies \Kns{i}\psi)$ & Distribution of $\Kns{i}$ \\
+			$\Kns{i}\varphi \iimplies \varphi$ & Truth \\
+			$\tlnot\Kns{i}\varphi \iimplies \Kns{i}\tlnot\Kns{i}\varphi$ & Negative Introspection \\
+			$\Bels{i}(\varphi \iimplies \psi) \iimplies (\Bels{i}\varphi \iimplies \Bels{i}\psi)$ & Distribution of $\Bels{i}$\\
+			$\Bels{i}\varphi \iimplies \BPoss{i}\varphi$ & Belief Consistency \\
+			%		$\Bels{i}\varphi \iimplies \Bels{i}\Bels{i}\varphi$ & Positive Belief Introspection \\
+			%		$\tlnot\Bels{i}\varphi \iimplies \Bels{i}\tlnot\Bels{i}\varphi$ & Negative Belief Introspection\\
+			$\Kns{i}\varphi \iimplies \Bels{i}\varphi$ & Knowledge implies Belief \\
+			$\Bels{i}\varphi \iimplies \Kns{i}\Bels{i}\varphi$ & Conscious Belief\\
+			%			$\Bels{i}\varphi \iimplies \Kns{i}\Bels{i}\varphi$ & Beliefs are Known\\
+			From $\vdash \varphi$ and $\vdash \varphi \iimplies \psi$, infer $\vdash\psi$ & Modus Ponens\\
+			From $\vdash \varphi$, infer $\vdash \Kns{i}\varphi$ & Necessitation of $\Kns{i}$\\
+			\hline
+		\end{tabular}
+		\caption{Logic of Kraus and Lehman}~\label{KL}
+	\end{center}
+\end{table}
+
+The key differences with \DASL\ are that knowledge is \SFive\ and the axiom of Conscious Belief, which reverses the composition of knowledge and belief under belief relative to \DASL's Evidential Restraint axiom. From the above axiom schemas, it follows that belief is a regular KD45 operator.
+
+In their article, and in Meyer and van der Hoek's \cite{MeyerHoek}, they show that $\Bels{i}(\Bels{i}\varphi \iimplies \varphi)$ is a theorem. Therefore, this system suffers from a particularly bad collision with L\"ob: Both the knowledge and belief modalities lead to inconsistency for intelligent agenst capable of self-referential reasoning.
 \section{\DASL}
 \label{sec:crap}
 
@@ -218,7 +246,7 @@ The logic defined by these axiom schemas and inference rules avoids L\"ob's Obst
 %Recall that the contrapositive of the Knowledge implies Belief axiom is $\BPoss{i}\varphi \iimplies \Poss{i}\varphi$. Our interpretation reads this as, ``$i$ considers $\varphi$ to be possible only if she has evidence that $\varphi$."  This may not be valid for how humans \emph{in fact} form beliefs, but it provides a normative dimension to the logic and some modest level of idealization. The agent's modeled by this logic are human-like, and maybe some particular humans actually abide by these axioms. We call these agents Grounded-Coherent agents, because their beliefs are grounded in evidence, and coherent because they avoid L\"ob's Obstacle.
 %
 %The belief operator narrowly avoids L\"ob's Obstacle. 
-Doxastic logic typically includes as an axiom of Belief Consistency, which corresponds to a serial doxastic possibility relation. Crucially, this axiom $\Bels{i}\varphi\iimplies\BPoss{i}]\varphi$ is equivalent to $\tlnot(\Bels{i}\varphi \tland \Bels{i}\tlnot\varphi)$, which is furthmore equivalent to $\tlnot\Bels{i}(\varphi \tland \tlnot \varphi)$, which results in a disaster.
+Doxastic logic typically includes as an axiom of Belief Consistency, which corresponds to a serial doxastic possibility relation. Crucially, this axiom $\Bels{i}\varphi\iimplies\BPoss{i}\varphi$ is equivalent to $\tlnot(\Bels{i}\varphi \tland \Bels{i}\tlnot\varphi)$, which is furthmore equivalent to $\tlnot\Bels{i}(\varphi \tland \tlnot \varphi)$, which results in a disaster.
 
 \begin{theorem}[Consistency Disaster]~\label{no_bel_cons}
 	If $\tlnot\Bels{i}(\varphi \tland \tlnot \varphi)$ and\\ $\Bels{i}(\Bels{i}\varphi \iimplies\varphi)\iimplies \Bels{i}\varphi$ are theorems, then $\Bels{i}(\varphi \tland \tlnot \varphi)$.
@@ -307,7 +335,7 @@ Without positive belief introspection, L\"ob's Theorem for belief is no longer d
 
 \begin{tcolorbox}
 	\begin{lstlisting}[language=Coq]
-	Theorem weak_evidential_restraint_not_sahlqvist: 
+	Theorem weak_evidential_restraint_is_sahlqvist: 
 		forall (phi : prop) (a : DASL.Agents),
 			sahlqvist_formula 
 			(SB a (SProp phi) =s=> \ (SK a (\ (SK a (SProp phi))))).
